--- a/Presentation/YoutubeApi.Api/appsettings.Development.json
+++ b/Presentation/YoutubeApi.Api/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=YoutubeApi;Trusted_Connection=True;"
+    "DefaultConnection": "Server=LAPTOP-124H4QM2;Database=YoutubeApi;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
