--- a/Presentation/YoutubeApi.Api/YoutubeApi.Api.csproj
+++ b/Presentation/YoutubeApi.Api/YoutubeApi.Api.csproj
@@ -17,10 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\..\Core\YoutubeApi.Mapper\YoutubeApi.Mapper.csproj" />
     <ProjectReference Include="..\..\Infrastructure\YoutubeApi.Persistence\YoutubeApi.Persistence.csproj" />
   </ItemGroup>
 
