--- a/Core/YoutubeApi.Application/YoutubeApi.Application.csproj
+++ b/Core/YoutubeApi.Application/YoutubeApi.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Core" Version="1.24.0" />
     <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
   </ItemGroup>
@@ -16,7 +17,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Features\Products\Command\" />
     <Folder Include="Interfaces\AutoMapper\" />
   </ItemGroup>
 
