--- a/Core/YoutubeApi.Application/YoutubeApi.Application.csproj
+++ b/Core/YoutubeApi.Application/YoutubeApi.Application.csproj
@@ -21,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Features\Products\Rules\" />
     <Folder Include="Interfaces\AutoMapper\" />
   </ItemGroup>
 
