Tokebn service yapıldı, createtoken metodu yapılandırıldı

--- a/Presentation/YoutubeApi.Api/appsettings.Development.json
+++ b/Presentation/YoutubeApi.Api/appsettings.Development.json
@@ -1,5 +1,12 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=LAPTOP-124H4QM2;Database=YoutubeApi;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "JWT": {
+    "Audience": "http://localhost:5000",
+    "Issuer": "http://localhost:5000",
+    "Secret": "%o(xppikam71ir9z9n=p83*u66j)w1rc&$f1oi20_k+i*k)r(d",
+    "TokenValidityInMunitues": 15,
+    "RefreshTokenValidityInDays": 60
   }
 }
