--- a/Core/YoutubeApi.Application/YoutubeApi.Application.csproj
+++ b/Core/YoutubeApi.Application/YoutubeApi.Application.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Features\Auth\Query\" />
     <Folder Include="Features\Products\Rules\" />
     <Folder Include="Interfaces\AutoMapper\" />
   </ItemGroup>
